--- a/post-system/package.json
+++ b/post-system/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "start": "node dist/server.js",
-    "dev": "tsc -w"
+    "dev": "tsc -w && nodemon dist/server.js"
   },
   "dependencies": {
     "express": "^5.1.0",
